--- a/index.html
+++ b/index.html
@@ -49,3 +49,6 @@
 </html>
 <!--         <img src="/images/bmw_m3.jpg" alt="BMW M3" />
  -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
